--- a/main.css
+++ b/main.css
@@ -23,11 +23,15 @@ body {
 
 .quote {
   font-family: 'Julius Sans One', sans-serif;
-  font-size: 2.5rem; 
+  font-size: 2.5rem;
+  
 }
 
 .author {
   font-family: 'Crimson Text', serif;
   font-size: 1.5rem;
   font-style: italic;
+  padding-top: 3rem;
+  
 }
+
